@@ -240,6 +240,9 @@ Release 2.6.0 - 2014-11-15
     MAPREDUCE-6048. Fixed TestJavaSerialization failure. (Varun Vasudev via
     jianhe)
 
+    MAPREDUCE-5958. Wrong reduce task progress if map output is compressed
+    (Emilio Coppa and jlowe via kihwal)
+
     MAPREDUCE-6156. Fetcher - connect() doesn't handle connection refused
     correctly (Junping Du via jlowe)
 
